--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ textarea:focus{
         dan pasti bikin kamu makin bad mood.
         </p>
         <div class="divider"></div>
-        <button onclick="nextPage(3)">Y</button>
+        <button onclick="nextPage(3)">y</button>
     </div>
 </div>
 
@@ -283,7 +283,7 @@ textarea:focus{
 
         <div class="option-container">
             <div class="option" onclick="nextPage(4)">Iyaa aku maafin</div>
-            <div class="option" id="noBtn">G</div>
+            <div class="option" id="noBtn">g</div>
         </div>
     </div>
 </div>
@@ -461,3 +461,4 @@ function checkMood(mood){
 </body>
 
 </html>
+
