--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ textarea:focus{
         <div class="divider"></div>
 
         <div class="small-box">
-            Yaa walaupun aku juga nambahin keselnya.
+            Aku juga makin bikin kamu kesel sihh hhehe
         </div>
 
         <div class="option-container">
@@ -461,4 +461,5 @@ function checkMood(mood){
 </body>
 
 </html>
+
 
