--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ textarea:focus{
         <p>
         Pagi ini bener-bener ngeselin yaa buat kamu,
         tapi satu pagi yang ngeselin nggak akan ngerusak mood
-        untuk satu hari penuh, kan?
+        untuk satu hari penuh, kan? So, maafin yahh
         </p>
 
         <div class="divider"></div>
@@ -497,6 +497,7 @@ function checkMood(mood){
 </body>
 
 </html>
+
 
 
 
