--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ textarea:focus{
         </div>
 
         <div class="option-container">
-            <div class="option" onclick="nextPage(4)">Iyaa aku maafin</div>
+            <div class="option" onclick="nextPage(4)">Iyaa Aku Maafin Kok</div>
             <div class="option" id="noBtn">g</div>
         </div>
     </div>
@@ -334,7 +334,7 @@ textarea:focus{
 <!-- PAGE 5 -->
 <div class="page hidden" id="page5">
     <div class="box">
-        <h1>Yah Masih Nggak Maafin 😭</h1>
+        <h1>YaHh Masih Nggak Maafin 😭</h1>
         <div class="divider"></div>
         <p>Yaudaa Gapapa Kalo Belum Dimaafin</p>
         <button onclick="nextPage(6)">Masuk Healing Room</button>
@@ -376,7 +376,7 @@ textarea:focus{
 
     <!-- WHATSAPP SUPPORT BOX (PINDAH KE SINI) -->
     <div class="healing-wa-box">
-        <p>Hope u feel better after this 🤍</p>
+        <p>Hope u feel better after this</p>
         <a class="healing-wa-btn"
            href="https://wa.me/6282232923136?text=aku%20lagi%20pengen%20cerita"
            target="_blank">
@@ -497,6 +497,7 @@ function checkMood(mood){
 </body>
 
 </html>
+
 
 
 
