--- a/index.html
+++ b/index.html
@@ -239,28 +239,32 @@ textarea:focus{
 
 /* HEALING WHATSAPP BOX */
 .healing-wa-box{
-    margin-top:60px;
-    padding:22px;
-    border-radius:20px;
-    background:rgba(255,255,255,0.06);
+    margin-top:40px;
+    padding:14px 16px;
+    border-radius:16px;
+    background:rgba(255,255,255,0.05);
     text-align:center;
-    backdrop-filter:blur(10px);
+    backdrop-filter:blur(8px);
+    max-width:320px;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .healing-wa-box p{
-    font-size:14px;
-    line-height:1.6;
-    margin-bottom:16px;
-    opacity:0.9;
+    font-size:12px;
+    line-height:1.5;
+    margin-bottom:10px;
+    opacity:0.85;
 }
 
 .healing-wa-btn{
     display:inline-block;
-    padding:12px 28px;
-    border-radius:30px;
+    padding:8px 18px;
+    border-radius:22px;
     background:#25D366;
     color:#111;
-    font-weight:600;
+    font-weight:500;
+    font-size:12px;
     text-decoration:none;
     transition:0.3s;
 }
@@ -334,7 +338,7 @@ textarea:focus{
 <!-- PAGE 5 -->
 <div class="page hidden" id="page5">
     <div class="box">
-        <h1>YaHh Masih Nggak Maafin 😭</h1>
+        <h1>Yahh Masih Nggak Maafin 😭</h1>
         <div class="divider"></div>
         <p>Yaudaa Gapapa Kalo Belum Dimaafin</p>
         <button onclick="nextPage(6)">Masuk Healing Room</button>
@@ -378,7 +382,7 @@ textarea:focus{
     <div class="healing-wa-box">
         <p>Hope u feel better after this</p>
         <a class="healing-wa-btn"
-           href="https://wa.me/6282232923136?text=aku%20lagi%20pengen%20cerita"
+           href="https://wa.me/6282232923136?text=..."
            target="_blank">
            💬 Kirim Pesan ke Aku
         </a>
@@ -497,6 +501,7 @@ function checkMood(mood){
 </body>
 
 </html>
+
 
 
 
